插入代码使用说明

--- a/基础模板.tex
+++ b/基础模板.tex
@@ -70,7 +70,8 @@
 % 附录
 \begin{appendices}
 
-    附录的内容。
+\section{代码}
+%\lstinputlisting[language=, firstline=, lastline=,caption=]{source}
 
 \end{appendices}
 
