--- a/基础模板.tex
+++ b/基础模板.tex
@@ -43,16 +43,18 @@
 \section{模型假设}
 
 \section{符号说明}
-
-    \begin{center}
-        \begin{tabular}{cc}
-            \hline
-            \makebox[0.3\textwidth][c]{符号}	&  \makebox[0.4\textwidth][c]{意义} \\ 
-            \hline
-            D	    & 木条宽度（cm） \\ 
-            \hline
-        \end{tabular}
-    \end{center}
+    \begin{table}[!h]
+        \centering
+        \caption{符号说明}
+        \setlength\tabcolsep{60pt} %修改最左边一列到边栏的间距
+        \begin{tabularx}{\textwidth}{XX}
+            \toprule[1.5pt]
+            符号 & 意义\\
+            \midrule[1pt]
+             & \\
+            \bottomrule[1.5pt]
+        \end{tabularx}
+    \end{table}
 
 \section{模型的建立与求解}
 
