--- a/使用说明.md
+++ b/使用说明.md
@@ -1,4 +1,4 @@
-# 基本模板及说明
+## 基本模板及说明
 
 ```latex{.line-numbers}
 
@@ -94,7 +94,6 @@ or
 latexmk -xelatex example
 ```
 
-# 语法
 
 ## 引用说明
 
@@ -441,3 +440,25 @@ f(x) =
 
 \lstinputlisting[language=, firstline=, lastline=,caption=]{source} %直接从文件中引入代码,firstline和lastline为从该文件中引入代码的起止行
 ```
+
+## 单位
+
+使用**siunitx宏包**来添加单位.该部分内容整合自此[博客](https://www.cnblogs.com/jun-phy/p/13749443.html)
+
+格式:`\SI{数字}{单位}`或者用`\num{}`输入数字,用`\si{}`输入单位.
+
+### 数字的输入
+
+使用`\num{}`
+
+- 小数点: `\num{123,456}`
+- 复数: `\num{1+-2i}`
+- 科学计数法: `\num{2.3e5}`,显示$2.3 \times 10^{5}$
+- 数字间的乘法: `\num{1.2 x 2.3 x 3}`,显示$1.2 \times 2.3 \times 3$
+
+### 单位
+
+- 符号$\mu$不用`$\mu$`来输入,该语法是斜体,而单位的需求是正体,应用`\micro`代替.
+- 其他符号直接填英文字母就行,且符号间需要有间隔时,加一个`.`就可以,如`kg.s^{-1}`
+- 指数上标可用`^{}`来输入,但是这样,上标可能过大;可在要输入上标的地方输入`\tothe{}`,来添加更小的上标.
+- 用`\text{}`可以输入汉字文字.
